--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11502,88 +11502,95 @@ video {
 [hidden]:where(:not([hidden="until-found"])) {
   display: none;
 }
+.tw-container {
+  width: 100%;
+}
+@media (min-width: 640px) {
+  .tw-container {
+    max-width: 640px;
+  }
+}
+@media (min-width: 768px) {
+  .tw-container {
+    max-width: 768px;
+  }
+}
+@media (min-width: 1024px) {
+  .tw-container {
+    max-width: 1024px;
+  }
+}
+@media (min-width: 1280px) {
+  .tw-container {
+    max-width: 1280px;
+  }
+}
+@media (min-width: 1536px) {
+  .tw-container {
+    max-width: 1536px;
+  }
+}
 .tw-mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
-.tw-mb-4 {
-  margin-bottom: 1rem;
-}
-.tw-mt-4 {
-  margin-top: 1rem;
-}
-.tw-inline-block {
-  display: inline-block;
+.tw-block {
+  display: block;
 }
 .tw-flex {
   display: flex;
 }
-.tw-table {
-  display: table;
-}
-.tw-h-auto {
-  height: auto;
-}
-.tw-w-1\/5 {
-  width: 20%;
-}
-.tw-w-full {
-  width: 100%;
-}
-.tw-max-w-7xl {
-  max-width: 80rem;
+.tw-w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .tw-max-w-md {
   max-width: 28rem;
 }
-.tw-table-fixed {
-  table-layout: fixed;
+.tw-max-w-40 {
+  max-width: 10rem;
 }
-.tw-cursor-pointer {
-  cursor: pointer;
+.tw-max-w-52 {
+  max-width: 13rem;
 }
-.tw-flex-col {
-  flex-direction: column;
+.tw-max-w-2xl {
+  max-width: 42rem;
 }
-.tw-items-center {
-  align-items: center;
+.tw-max-w-xl {
+  max-width: 36rem;
+}
+.tw-max-w-lg {
+  max-width: 32rem;
+}
+.tw-flex-nowrap {
+  flex-wrap: nowrap;
 }
 .tw-justify-end {
   justify-content: flex-end;
 }
-.tw-justify-center {
-  justify-content: center;
+.tw-gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
-.tw-justify-between {
-  justify-content: space-between;
-}
-.tw-rounded-lg {
-  border-radius: 0.5rem;
-}
-.tw-border-b {
-  border-bottom-width: 1px;
-}
-.tw-bg-white {
+.tw-bg-gray-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity, 1));
 }
-.tw-p-4 {
-  padding: 1rem;
+.tw-bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+.tw-bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity, 1));
+}
+.tw-bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 .tw-px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-.tw-py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.tw-text-center {
-  text-align: center;
-}
-.tw-text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 .tw-text-xl {
   font-size: 1.25rem;
@@ -11592,24 +11599,55 @@ video {
 .tw-font-bold {
   font-weight: 700;
 }
+.tw-text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+}
 .tw-text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
-.tw-text-gray-900 {
+.tw-text-blue-500 {
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
+  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
 }
-.tw-text-gray-800 {
+.tw-text-green-700 {
   --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+  color: rgb(21 128 61 / var(--tw-text-opacity, 1));
+}
+.tw-text-red-700 {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity, 1));
+}
+.tw-text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity, 1));
+}
+.tw-text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
+}
+.tw-text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
 }
 .tw-text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
-.tw-shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.tw-text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+.tw-text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+.hover\:tw-bg-green-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity, 1));
+}
+.hover\:tw-bg-red-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity, 1));
 }
