--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11502,38 +11502,6 @@ video {
 [hidden]:where(:not([hidden="until-found"])) {
   display: none;
 }
-.tw-container {
-  width: 100%;
-}
-@media (min-width: 640px) {
-  .tw-container {
-    max-width: 640px;
-  }
-}
-@media (min-width: 768px) {
-  .tw-container {
-    max-width: 768px;
-  }
-}
-@media (min-width: 1024px) {
-  .tw-container {
-    max-width: 1024px;
-  }
-}
-@media (min-width: 1280px) {
-  .tw-container {
-    max-width: 1280px;
-  }
-}
-@media (min-width: 1536px) {
-  .tw-container {
-    max-width: 1536px;
-  }
-}
-.tw-mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
 .tw-block {
   display: block;
 }
@@ -11544,33 +11512,24 @@ video {
   width: -moz-fit-content;
   width: fit-content;
 }
-.tw-max-w-md {
-  max-width: 28rem;
-}
-.tw-max-w-40 {
-  max-width: 10rem;
-}
-.tw-max-w-52 {
-  max-width: 13rem;
-}
-.tw-max-w-2xl {
-  max-width: 42rem;
-}
-.tw-max-w-xl {
-  max-width: 36rem;
-}
 .tw-max-w-lg {
   max-width: 32rem;
 }
-.tw-flex-nowrap {
-  flex-wrap: nowrap;
+.tw-max-w-md {
+  max-width: 28rem;
 }
 .tw-justify-end {
   justify-content: flex-end;
 }
+.tw-gap-2 {
+  gap: 0.5rem;
+}
 .tw-gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
+}
+.tw-justify-self-end {
+  justify-self: end;
 }
 .tw-bg-gray-500 {
   --tw-bg-opacity: 1;
@@ -11588,10 +11547,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
-.tw-px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
 .tw-text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -11599,55 +11554,27 @@ video {
 .tw-font-bold {
   font-weight: 700;
 }
+.tw-text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
 .tw-text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
-}
-.tw-text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
-}
-.tw-text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
-}
-.tw-text-green-700 {
-  --tw-text-opacity: 1;
-  color: rgb(21 128 61 / var(--tw-text-opacity, 1));
-}
-.tw-text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity, 1));
 }
 .tw-text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity, 1));
 }
-.tw-text-gray-100 {
+.tw-text-red-500 {
   --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
-}
-.tw-text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 .tw-text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
-.tw-text-gray-300 {
+.tw-text-orange-500 {
   --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
-}
-.tw-text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
-}
-.hover\:tw-bg-green-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity, 1));
-}
-.hover\:tw-bg-red-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity, 1));
+  color: rgb(249 115 22 / var(--tw-text-opacity, 1));
 }
