--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .heading_container h2 span {
-  color: #0a97b0;
+  color: #4e73df;
 }
 
 .heading_container p {
@@ -143,7 +143,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #0a97b0;
+  color: #4e73df;
 }
 
 .header_section .header_top .contact_nav a:hover i {
@@ -185,7 +185,7 @@ a:focus {
 }
 
 .custom_nav-container .navbar-nav .nav-item:hover .nav-link, .custom_nav-container .navbar-nav .nav-item.active .nav-link {
-  color: #0a97b0;
+  color: #4e73df;
 }
 
 .custom_nav-container .nav_search-btn {
@@ -371,7 +371,7 @@ a:focus {
 .slider_section .detail-box .btn-box .btn1 {
   display: inline-block;
   padding: 10px 15px;
-  background-color: #0a97b0;
+  background-color: #4e73df;
   color: #ffffff;
   border-radius: 0;
   -webkit-transition: all .3s;
@@ -421,7 +421,7 @@ a:focus {
 .slider_section .carousel-indicators li.active {
   width: 20px;
   height: 20px;
-  background-color: #0a97b0;
+  background-color: #4e73df;
 }
 
 .service_section {
@@ -472,7 +472,7 @@ a:focus {
 }
 
 .service_section .box .detail-box a:hover {
-  color: #0a97b0;
+  color: #4e73df;
 }
 
 .about_section .row {
@@ -523,7 +523,7 @@ a:focus {
 .about_section .detail-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #0a97b0;
+  background-color: #4e73df;
   color: #ffffff;
   border-radius: 0px;
   -webkit-transition: all .3s;
@@ -622,7 +622,7 @@ a:focus {
           flex: 1;
   display: inline-block;
   padding: 9px 30px;
-  background-color: #0a97b0;
+  background-color: #4e73df;
   color: #ffffff;
   border-radius: 0;
   -webkit-transition: all .3s;
@@ -706,7 +706,7 @@ a:focus {
   position: absolute;
   right: -15%;
   outline: none;
-  background-color: #0a97b0;
+  background-color: #4e73df;
 }
 
 .client_section .owl-carousel .owl-nav .owl-prev:hover,
@@ -778,7 +778,7 @@ a:focus {
   text-transform: uppercase;
   display: inline-block;
   padding: 12px 55px;
-  background-color: #0a97b0;
+  background-color: #4e73df;
   color: #ffffff;
   border-radius: 5px;
   -webkit-transition: all .3s;
@@ -848,7 +848,7 @@ a:focus {
 }
 
 .info_section .info_contact .contact_link_box a:hover {
-  color: #0a97b0;
+  color: #4e73df;
 }
 
 .info_section .info_social {
@@ -876,7 +876,7 @@ a:focus {
 }
 
 .info_section .info_social a:hover {
-  color: #0a97b0;
+  color: #4e73df;
 }
 
 .info_section .info_links {
@@ -903,7 +903,7 @@ a:focus {
 }
 
 .info_section .info_links a:hover {
-  color: #0a97b0;
+  color: #4e73df;
 }
 
 .info_section form input {
@@ -937,7 +937,7 @@ a:focus {
   text-align: center;
   display: inline-block;
   padding: 10px 55px;
-  background-color: #0a97b0;
+  background-color: #4e73df;
   color: #ffffff;
   border-radius: 0;
   -webkit-transition: all .3s;
