--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11187,15 +11187,36 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-flex{
     display: flex
 }
+.tw-hidden{
+    display: none
+}
+.tw-h-full{
+    height: 100%
+}
 .tw-w-fit{
     width: -moz-fit-content;
     width: fit-content
+}
+.tw-w-full{
+    width: 100%
 }
 .tw-max-w-lg{
     max-width: 32rem
 }
 .tw-max-w-md{
     max-width: 28rem
+}
+.tw-max-w-12{
+    max-width: 3rem
+}
+.tw-max-w-36{
+    max-width: 9rem
+}
+.tw-max-w-52{
+    max-width: 13rem
+}
+.tw-max-w-\[300px\]{
+    max-width: 300px
 }
 .tw-justify-end{
     justify-content: flex-end
@@ -11204,9 +11225,15 @@ body.sidebar-toggled footer.sticky-footer {
     -moz-column-gap: 0.5rem;
          column-gap: 0.5rem
 }
-.tw-bg-cyan-400{
+.tw-overflow-y-auto{
+    overflow-y: auto
+}
+.tw-rounded-lg{
+    border-radius: 0.5rem
+}
+.tw-bg-\[\#4e73df\]{
     --tw-bg-opacity: 1;
-    background-color: rgb(34 211 238 / var(--tw-bg-opacity, 1))
+    background-color: rgb(78 115 223 / var(--tw-bg-opacity, 1))
 }
 .tw-bg-gray-500{
     --tw-bg-opacity: 1;
@@ -11224,25 +11251,17 @@ body.sidebar-toggled footer.sticky-footer {
     --tw-bg-opacity: 1;
     background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1))
 }
-.tw-bg-cyan-100{
+.tw-bg-sky-950{
     --tw-bg-opacity: 1;
-    background-color: rgb(207 250 254 / var(--tw-bg-opacity, 1))
+    background-color: rgb(8 47 73 / var(--tw-bg-opacity, 1))
 }
-.tw-bg-sky-100{
+.tw-bg-cyan-500{
     --tw-bg-opacity: 1;
-    background-color: rgb(224 242 254 / var(--tw-bg-opacity, 1))
-}
-.tw-bg-blue-50{
-    --tw-bg-opacity: 1;
-    background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1))
+    background-color: rgb(6 182 212 / var(--tw-bg-opacity, 1))
 }
 .tw-py-6{
     padding-top: 1.5rem;
     padding-bottom: 1.5rem
-}
-.tw-text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem
 }
 .tw-text-4xl{
     font-size: 2.25rem;
@@ -11255,6 +11274,10 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem
+}
+.tw-text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem
 }
 .tw-font-bold{
     font-weight: 700
@@ -11269,6 +11292,10 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-text-gray-500{
     --tw-text-opacity: 1;
     color: rgb(107 114 128 / var(--tw-text-opacity, 1))
+}
+.tw-text-gray-700{
+    --tw-text-opacity: 1;
+    color: rgb(55 65 81 / var(--tw-text-opacity, 1))
 }
 .tw-text-gray-800{
     --tw-text-opacity: 1;
@@ -11286,7 +11313,7 @@ body.sidebar-toggled footer.sticky-footer {
     --tw-text-opacity: 1;
     color: rgb(239 68 68 / var(--tw-text-opacity, 1))
 }
-.tw-text-gray-700{
+.tw-text-white{
     --tw-text-opacity: 1;
-    color: rgb(55 65 81 / var(--tw-text-opacity, 1))
+    color: rgb(255 255 255 / var(--tw-text-opacity, 1))
 }
