--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11187,9 +11187,6 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-flex{
     display: flex
 }
-.tw-hidden{
-    display: none
-}
 .tw-h-full{
     height: 100%
 }
@@ -11200,23 +11197,20 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-w-full{
     width: 100%
 }
+.tw-max-w-\[300px\]{
+    max-width: 300px
+}
 .tw-max-w-lg{
     max-width: 32rem
 }
 .tw-max-w-md{
     max-width: 28rem
 }
-.tw-max-w-12{
-    max-width: 3rem
-}
 .tw-max-w-36{
     max-width: 9rem
 }
-.tw-max-w-52{
-    max-width: 13rem
-}
-.tw-max-w-\[300px\]{
-    max-width: 300px
+.tw-max-w-sm{
+    max-width: 24rem
 }
 .tw-justify-end{
     justify-content: flex-end
@@ -11234,6 +11228,10 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-bg-\[\#4e73df\]{
     --tw-bg-opacity: 1;
     background-color: rgb(78 115 223 / var(--tw-bg-opacity, 1))
+}
+.tw-bg-cyan-500{
+    --tw-bg-opacity: 1;
+    background-color: rgb(6 182 212 / var(--tw-bg-opacity, 1))
 }
 .tw-bg-gray-500{
     --tw-bg-opacity: 1;
@@ -11254,10 +11252,6 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-bg-sky-950{
     --tw-bg-opacity: 1;
     background-color: rgb(8 47 73 / var(--tw-bg-opacity, 1))
-}
-.tw-bg-cyan-500{
-    --tw-bg-opacity: 1;
-    background-color: rgb(6 182 212 / var(--tw-bg-opacity, 1))
 }
 .tw-py-6{
     padding-top: 1.5rem;
