--- a/public/assets/css/tailwind.css
+++ b/public/assets/css/tailwind.css
@@ -117,9 +117,6 @@
 .tw-flex {
     display: flex
 }
-.tw-hidden {
-    display: none
-}
 .tw-h-full {
     height: 100%
 }
@@ -130,23 +127,20 @@
 .tw-w-full {
     width: 100%
 }
+.tw-max-w-\[300px\] {
+    max-width: 300px
+}
 .tw-max-w-lg {
     max-width: 32rem
 }
 .tw-max-w-md {
     max-width: 28rem
 }
-.tw-max-w-12 {
-    max-width: 3rem
-}
 .tw-max-w-36 {
     max-width: 9rem
 }
-.tw-max-w-52 {
-    max-width: 13rem
-}
-.tw-max-w-\[300px\] {
-    max-width: 300px
+.tw-max-w-sm {
+    max-width: 24rem
 }
 .tw-justify-end {
     justify-content: flex-end
@@ -164,6 +158,10 @@
 .tw-bg-\[\#4e73df\] {
     --tw-bg-opacity: 1;
     background-color: rgb(78 115 223 / var(--tw-bg-opacity, 1))
+}
+.tw-bg-cyan-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(6 182 212 / var(--tw-bg-opacity, 1))
 }
 .tw-bg-gray-500 {
     --tw-bg-opacity: 1;
@@ -184,10 +182,6 @@
 .tw-bg-sky-950 {
     --tw-bg-opacity: 1;
     background-color: rgb(8 47 73 / var(--tw-bg-opacity, 1))
-}
-.tw-bg-cyan-500 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(6 182 212 / var(--tw-bg-opacity, 1))
 }
 .tw-py-6 {
     padding-top: 1.5rem;
