--- a/public/assets/css/tailwind.css
+++ b/public/assets/css/tailwind.css
@@ -208,12 +208,6 @@
 .tw-rounded-lg {
     border-radius: 0.5rem
 }
-.tw-border {
-    border-width: 1px
-}
-.tw-border-2 {
-    border-width: 2px
-}
 .tw-border-4 {
     border-width: 4px
 }
@@ -343,6 +337,10 @@
 .tw-text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1))
+}
+.tw-text-yellow-500 {
+    --tw-text-opacity: 1;
+    color: rgb(234 179 8 / var(--tw-text-opacity, 1))
 }
 .tw-text-blue-500 {
     --tw-text-opacity: 1;
