--- a/public/assets/css/tailwind.css
+++ b/public/assets/css/tailwind.css
@@ -150,6 +150,9 @@
 .tw-mt-4 {
     margin-top: 1rem
 }
+.tw-mt-2 {
+    margin-top: 0.5rem
+}
 .tw-block {
     display: block
 }
@@ -181,6 +184,9 @@
 .tw-max-w-md {
     max-width: 28rem
 }
+.tw-border-collapse {
+    border-collapse: collapse
+}
 .tw-list-inside {
     list-style-position: inside
 }
@@ -207,6 +213,9 @@
 }
 .tw-rounded-lg {
     border-radius: 0.5rem
+}
+.tw-rounded {
+    border-radius: 0.25rem
 }
 .tw-border-4 {
     border-width: 4px
@@ -250,8 +259,22 @@
     --tw-bg-opacity: 1;
     background-color: rgb(8 47 73 / var(--tw-bg-opacity, 1))
 }
+.tw-bg-red-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(254 226 226 / var(--tw-bg-opacity, 1))
+}
+.tw-bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
+}
 .tw-p-6 {
     padding: 1.5rem
+}
+.tw-p-2 {
+    padding: 0.5rem
+}
+.tw-p-3 {
+    padding: 0.75rem
 }
 .tw-px-6 {
     padding-left: 1.5rem;
@@ -264,6 +287,13 @@
 .tw-py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem
+}
+.tw-px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem
+}
+.tw-text-left {
+    text-align: left
 }
 .tw-text-4xl {
     font-size: 2.25rem;
@@ -285,14 +315,25 @@
     font-size: 1.25rem;
     line-height: 1.75rem
 }
+.tw-text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem
+}
 .tw-font-bold {
     font-weight: 700
 }
 .tw-font-extrabold {
     font-weight: 800
 }
+.tw-font-semibold {
+    font-weight: 600
+}
 .tw-leading-6 {
     line-height: 1.5rem
+}
+.tw-text-blue-500 {
+    --tw-text-opacity: 1;
+    color: rgb(59 130 246 / var(--tw-text-opacity, 1))
 }
 .tw-text-blue-600 {
     --tw-text-opacity: 1;
@@ -342,9 +383,9 @@
     --tw-text-opacity: 1;
     color: rgb(234 179 8 / var(--tw-text-opacity, 1))
 }
-.tw-text-blue-500 {
+.tw-text-gray-600 {
     --tw-text-opacity: 1;
-    color: rgb(59 130 246 / var(--tw-text-opacity, 1))
+    color: rgb(75 85 99 / var(--tw-text-opacity, 1))
 }
 .tw-shadow-md {
     --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
