--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11266,6 +11266,12 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-max-w-xl{
     max-width: 36rem
 }
+.tw-max-w-\[200px\]{
+    max-width: 200px
+}
+.tw-max-w-\[150px\]{
+    max-width: 150px
+}
 .tw-list-inside{
     list-style-position: inside
 }
