--- a/public/assets/css/tailwind.css
+++ b/public/assets/css/tailwind.css
@@ -196,6 +196,12 @@
 .tw-max-w-xl {
     max-width: 36rem
 }
+.tw-max-w-\[200px\] {
+    max-width: 200px
+}
+.tw-max-w-\[150px\] {
+    max-width: 150px
+}
 .tw-list-inside {
     list-style-position: inside
 }
