--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11214,6 +11214,12 @@ body.sidebar-toggled footer.sticky-footer {
     margin-top: 1.25rem;
     margin-bottom: 1.25rem
 }
+.tw-mb-0{
+    margin-bottom: 0px
+}
+.tw-mb-2{
+    margin-bottom: 0.5rem
+}
 .tw-mb-4{
     margin-bottom: 1rem
 }
@@ -11228,6 +11234,9 @@ body.sidebar-toggled footer.sticky-footer {
 }
 .tw-mt-4{
     margin-top: 1rem
+}
+.tw-mb-1{
+    margin-bottom: 0.25rem
 }
 .tw-block{
     display: block
@@ -11254,6 +11263,9 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-max-w-4xl{
     max-width: 56rem
 }
+.tw-max-w-\[150px\]{
+    max-width: 150px
+}
 .tw-max-w-\[300px\]{
     max-width: 300px
 }
@@ -11265,12 +11277,6 @@ body.sidebar-toggled footer.sticky-footer {
 }
 .tw-max-w-xl{
     max-width: 36rem
-}
-.tw-max-w-\[200px\]{
-    max-width: 200px
-}
-.tw-max-w-\[150px\]{
-    max-width: 150px
 }
 .tw-list-inside{
     list-style-position: inside
@@ -11341,6 +11347,10 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-bg-gray-100{
     --tw-bg-opacity: 1;
     background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1))
+}
+.tw-bg-gray-200{
+    --tw-bg-opacity: 1;
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1))
 }
 .tw-bg-gray-50{
     --tw-bg-opacity: 1;
