--- a/public/assets/css/tailwind.css
+++ b/public/assets/css/tailwind.css
@@ -144,6 +144,12 @@
     margin-top: 1.25rem;
     margin-bottom: 1.25rem
 }
+.tw-mb-0 {
+    margin-bottom: 0px
+}
+.tw-mb-2 {
+    margin-bottom: 0.5rem
+}
 .tw-mb-4 {
     margin-bottom: 1rem
 }
@@ -158,6 +164,9 @@
 }
 .tw-mt-4 {
     margin-top: 1rem
+}
+.tw-mb-1 {
+    margin-bottom: 0.25rem
 }
 .tw-block {
     display: block
@@ -184,6 +193,9 @@
 .tw-max-w-4xl {
     max-width: 56rem
 }
+.tw-max-w-\[150px\] {
+    max-width: 150px
+}
 .tw-max-w-\[300px\] {
     max-width: 300px
 }
@@ -195,12 +207,6 @@
 }
 .tw-max-w-xl {
     max-width: 36rem
-}
-.tw-max-w-\[200px\] {
-    max-width: 200px
-}
-.tw-max-w-\[150px\] {
-    max-width: 150px
 }
 .tw-list-inside {
     list-style-position: inside
@@ -271,6 +277,10 @@
 .tw-bg-gray-100 {
     --tw-bg-opacity: 1;
     background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1))
+}
+.tw-bg-gray-200 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1))
 }
 .tw-bg-gray-50 {
     --tw-bg-opacity: 1;
