--- a/public/assets/css/tailwind.css
+++ b/public/assets/css/tailwind.css
@@ -147,6 +147,9 @@
 .tw-mb-0 {
     margin-bottom: 0px
 }
+.tw-mb-1 {
+    margin-bottom: 0.25rem
+}
 .tw-mb-2 {
     margin-bottom: 0.5rem
 }
@@ -164,9 +167,6 @@
 }
 .tw-mt-4 {
     margin-top: 1rem
-}
-.tw-mb-1 {
-    margin-bottom: 0.25rem
 }
 .tw-block {
     display: block
@@ -199,9 +199,6 @@
 .tw-max-w-\[300px\] {
     max-width: 300px
 }
-.tw-max-w-lg {
-    max-width: 32rem
-}
 .tw-max-w-md {
     max-width: 28rem
 }
@@ -223,9 +220,8 @@
 .tw-justify-center {
     justify-content: center
 }
-.tw-gap-x-2 {
-    -moz-column-gap: 0.5rem;
-         column-gap: 0.5rem
+.tw-gap-2 {
+    gap: 0.5rem
 }
 .tw-space-y-2 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
