--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11238,6 +11238,21 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-mt-4{
     margin-top: 1rem
 }
+.tw-ml-1{
+    margin-left: 0.25rem
+}
+.tw-ml-2{
+    margin-left: 0.5rem
+}
+.tw-mr-2{
+    margin-right: 0.5rem
+}
+.tw-mr-3{
+    margin-right: 0.75rem
+}
+.tw-mb-3{
+    margin-bottom: 0.75rem
+}
 .tw-block{
     display: block
 }
@@ -11290,8 +11305,14 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-justify-center{
     justify-content: center
 }
+.tw-justify-between{
+    justify-content: space-between
+}
 .tw-gap-2{
     gap: 0.5rem
+}
+.tw-gap-4{
+    gap: 1rem
 }
 .tw-space-y-2 > :not([hidden]) ~ :not([hidden]){
     --tw-space-y-reverse: 0;
@@ -11318,6 +11339,9 @@ body.sidebar-toggled footer.sticky-footer {
 }
 .tw-rounded-lg{
     border-radius: 0.5rem
+}
+.tw-rounded-md{
+    border-radius: 0.375rem
 }
 .tw-border-4{
     border-width: 4px
@@ -11429,6 +11453,10 @@ body.sidebar-toggled footer.sticky-footer {
     font-size: 1.25rem;
     line-height: 1.75rem
 }
+.tw-text-xs{
+    font-size: 0.75rem;
+    line-height: 1rem
+}
 .tw-font-bold{
     font-weight: 700
 }
@@ -11498,6 +11526,10 @@ body.sidebar-toggled footer.sticky-footer {
 .tw-text-yellow-500{
     --tw-text-opacity: 1;
     color: rgb(234 179 8 / var(--tw-text-opacity, 1))
+}
+.tw-text-gray-600{
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity, 1))
 }
 .tw-shadow-md{
     --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
