--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11525,10 +11525,17 @@ body.sidebar-toggled footer.sticky-footer {
     --tw-text-opacity: 1;
     color: rgb(234 179 8 / var(--tw-text-opacity, 1))
 }
+.tw-text-yellow-600{
+    --tw-text-opacity: 1;
+    color: rgb(202 138 4 / var(--tw-text-opacity, 1))
+}
 .tw-shadow-md{
     --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+.hover\:tw-cursor-pointer:hover{
+    cursor: pointer
 }
 .hover\:tw-bg-gray-100:hover{
     --tw-bg-opacity: 1;
